<resources>
    <string name="logo_text">Glej, kje hodiš</string>

    <string name="app_name">Pazi kje hodis</string>
    <string name="title_activity_maps">Glej, kje hodiš</string>
    <string name="add">Dodaj zgodbo</string>
    <string name="storySLO">Dodaj svojo zgodbo</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="facebook_app_id">783783935107135</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="buttonSave">Save</string>
    <string name="buttonCancel">Cancel</string>


    <!-- VIEW DETAILS FRAGMENT CONTROL -->
    <string name="buttonAttach_details">DODAJ SLIKO</string>
    <string name="title_Hint">Vnesi naslov zgodbe</string>
    <string name="name_hint">Dodaj ime</string>
    <string name="description_hint">Dodaj opis</string>
    <string name="form_picture_text">       DODAJ SLIKO</string>
    <string name="mainMenuWalkthrough">Kako deluje?</string>
    <string name="mainMenuMap">Prikaži zemljevid</string>
    <string name="mainMenuExplore">Raziskuj</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam et porta lorem, eu mattis lectus. Nam pellentesque leo massa, fermentum interdum nibh sodales et. Fusce euismod leo arcu, sit amet ullamcorper odio eleifend quis. Aenean id ex turpis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nam sed sapien turpis. Morbi lacus arcu, semper vitae faucibus a, mattis ut metus. Suspendisse in turpis est.</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Drawer Menu Item -->
    <string name="menu_map">Zemljevid</string>
    <string name="menu_loc">Lokacije</string>
    <string name="menu_my_loc">Moje Lokacije</string>
    <string name="menu_path">Poti</string>
    <string name="menu_my_path">Moje poti</string>
    <string name="menu_search">Iskanje</string>
    <string name="menu_add_new">Dodaj novo pot</string>
    <string name="menu_how_to">Predstavitev</string>
    <string name="menu_loging">Odjava</string>

    <!--location info window marker  error load -->
    <string name="error_load_info">Info za lokacijo ne obstaja</string>

    <!-- location add form -->

    <string name="form_author">AVTOR-ICA</string>
    <string name="form__title">Naslov zgodbe</string>
    <string name="form_story">Zgodba (najmanj 120 znakov)</string>
    <string name="form_btn_add_pic">Dodaj sliko</string>
    <string name="form_upload">Dodaj lokacijo</string>
    <string name="form_address">Naslov</string>

    <!-- path add form -->
    <string name="path_author">AVTOR-ICA</string>
    <string name="path_city">KRAJ POTI</string>
    <string name="path_title">IME POTI</string>
    <string name="path_description">PREDSTAVITEV POTI (min. 120 znakov)</string>
    <string name="path_add_btn">OBJAVI POT</string>

    <string name="delete_location">Odstrani lokacijo</string>
    <string name="edit_location">Spremeni lokacijo</string>

    <string name="delete_path">Odstrani pot</string>
    <string name="edit_path">Spremeni pot</string>


    <string name="path_edit_save_btn">Shrani pot</string>
    <string name="edit_path_edit_locations">Spremeni lokacije</string>

    <string name="chooseLocation">Z dotikom na izbrano mesto izberi lokacijo na zemljevidu.</string>





</resources>
