<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textSize="12sp"
                android:hint="@string/form_author" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:maxLines="1"
                android:hint="@string/form_address" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_loc_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_loc_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="12sp"
                android:hint="@string/form__title" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_story_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_story"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:textSize="12sp"
                android:lines="4"
                android:hint="@string/form_story" />

        </android.support.design.widget.TextInputLayout>

        <Button android:id="@+id/input_btn_add_pic"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_btn_add_pic"
            android:background="@color/colorPrimary"
            android:layout_marginTop="25dp"
            android:textColor="@android:color/white"/>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_imageurl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
         <TextView
        android:id="@+id/input_img_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="URL Slike:"
            android:textSize="12sp"
            android:inputType="textUri"
             />
        </android.support.design.widget.TextInputLayout>

        <Button android:id="@+id/input_btn_upload"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_upload"
            android:background="@color/colorPrimary"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"/>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>