<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        style="@style/AppDrawerStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/red_default"
                android:orientation="vertical"
                android:paddingBottom="8dp"
                android:paddingTop="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="navigationViewHomeClick"
                        android:src="@drawable/logo"
                        android:layout_marginEnd="10dp"
                        android:tint="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/logo_text"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/navHeaderText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:paddingBottom="16dp"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    tools:text="Username" />

            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:onClick="navigationViewMapClick"
                        android:orientation="horizontal"
                        android:padding="16dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_map_white_24dp"
                            android:tint="@color/grey_light" />

                        <TextView
                            android:id="@+id/navCont_map"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_weight="1"
                            android:text="@string/menu_map"
                            android:textColor="@color/darkGrey" />

                    </LinearLayout>

                    <include
                        layout="@layout/data_decoration_line"
                        android:layout_width="match_parent"
                        android:layout_height="1dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:onClick="navigationViewLocationClick"
                        android:orientation="horizontal"
                        android:padding="16dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_place_white_24dp"
                            android:tint="@color/grey_light" />

                        <TextView
                            android:id="@+id/navCont_loc"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_weight="1"
                            android:text="@string/menu_loc"
                            android:textColor="@color/darkGrey" />

                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/my_location_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"
                        android:gravity="center_vertical"
                        android:onClick="navigationViewMyLocationClick"
                        android:orientation="horizontal"
                        android:padding="16dp"
                        >

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_place_white_24dp"
                            android:tint="@color/grey_light" />

                        <TextView
                            android:id="@+id/navCont_my_loc"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="25dp"
                            android:layout_weight="1"
                            android:text="@string/menu_my_loc"
                            android:textColor="@color/darkGrey" />

                    </LinearLayout>
                    <include
                        layout="@layout/data_decoration_line"
                        android:layout_width="match_parent"
                        android:layout_height="1dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:onClick="navigationViewPathClick"
                        android:orientation="horizontal"
                        android:padding="16dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_timeline_white_24dp"
                            android:tint="@color/grey_light" />

                        <TextView
                            android:id="@+id/navCont_path"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_weight="1"
                            android:text="@string/menu_path"
                            android:textColor="@color/darkGrey" />

                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/my_paths_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:onClick="navigationViewMyPathClick"
                        android:orientation="horizontal"
                        android:padding="16dp"
                        android:layout_marginLeft="40dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_timeline_white_24dp"
                            android:tint="@color/grey_light"
                            />

                        <TextView

                            android:id="@+id/navCont_my_path"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="25dp"
                            android:layout_weight="1"
                            android:text="@string/menu_my_path"
                            android:textColor="@color/darkGrey" />


                    </LinearLayout>

                    <include
                        layout="@layout/data_decoration_line"
                        android:layout_width="match_parent"
                        android:layout_height="1dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:onClick="navigationViewAddClick"
                        android:id="@+id/nav_add_new"
                        android:orientation="horizontal"
                        android:padding="10dp"
                        >
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_add_white_36dp" />

                        <TextView
                            android:id="@+id/navCont_addNew"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_weight="1"
                            android:text="@string/menu_add_new"
                            android:textColor="@color/darkGrey" />



                    </LinearLayout>

                    <include
                        layout="@layout/data_decoration_line"
                        android:layout_width="match_parent"
                        android:layout_height="1dp" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:onClick="navigationViewSearchClick"
                        android:orientation="horizontal"
                        android:padding="16dp"
                        >

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/places_ic_search" />

                        <TextView
                            android:id="@+id/navCont_search"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_weight="1"
                            android:text="@string/menu_search"
                            android:textColor="@color/darkGrey" />



                    </LinearLayout>

                    <include
                        layout="@layout/data_decoration_line"
                        android:layout_width="match_parent"
                        android:layout_height="1dp" />



                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:gravity="bottom"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:onClick="navigationViewWhatsNewClick"
                            android:orientation="horizontal"
                            android:padding="16dp">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_grade_white_24dp"
                                android:tint="@color/grey_light" />

                            <TextView
                                android:id="@+id/navCont_howTo"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_weight="1"
                                android:text="@string/menu_how_to"
                                android:textColor="@color/darkGrey" />

                        </LinearLayout>

                        <include
                            layout="@layout/data_decoration_line"
                            android:layout_width="match_parent"
                            android:layout_height="1dp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:onClick="navigationViewLogingClick"
                            android:orientation="horizontal"
                            android:padding="16dp">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_reply_white_24dp"
                                android:tint="@color/grey_light" />

                            <TextView
                                android:id="@+id/navCont_loging"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_weight="1"
                                android:text="@string/menu_loging"
                                android:textColor="@color/darkGrey" />

                        </LinearLayout>

                        <include
                            layout="@layout/data_decoration_line"
                            android:layout_width="match_parent"
                            android:layout_height="1dp" />

                    </LinearLayout>

                </LinearLayout>

            </ScrollView>

        </LinearLayout>

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>

    <!--TODO: adjuste working layout to all phones--><!--TODO: drawer set differently for logged in user-->
